@startuml

title __ASSIGNMENT3's Class Diagram__\n

  namespace com.example.assignment3 {
    class com.example.assignment3.ForecastWeatherActivity {
        ~ arrayDayTemp : ArrayList<String>
        ~ arrayMainAndDescription : ArrayList<String>
        ~ arrayNightTemp : ArrayList<String>
        ~ btnBackToMain : Button
        ~ dayTitles : String[]
        ~ listView : ListView
        ~ requestQueue : RequestQueue
        ~ tvCityName : TextView
        - API_KEY : String
        {static} + GetStringArray()
        # onCreate()
        - fetchWeatherForecastInfo()
    }
  }
  

  namespace com.example.assignment3 {
    class com.example.assignment3.ForecastWeatherActivity.ForecastAdapter {
        ~ dayTemp : String[]
        ~ mainAndDescription : String[]
        ~ nightTemp : String[]
        ~ titles : String[]
        + ForecastAdapter()
        + getCount()
        + getItem()
        + getItemId()
        + getView()
    }
  }
  

  namespace com.example.assignment3 {
    class com.example.assignment3.MainActivity {
        ~ Icon : String
        ~ btnGetCityWeatherForecast : Button
        ~ btnGetInfo : Button
        ~ btnGetWeather : Button
        ~ btnShowOnMaps : Button
        ~ cityNameFW : String
        ~ df : DecimalFormat
        ~ etCity : EditText
        ~ imageView : ImageView
        ~ requestQueue : RequestQueue
        ~ strLat : String
        ~ strLong : String
        ~ tvResult : TextView
        - API_KEY : String
        - url : String
        - urlInfo : String
        # onCreate()
        - fetchCityInfo()
        - fetchWeatherInfo()
        - showForecast()
        - showOnMap()
    }
  }
  

  namespace com.example.assignment3 {
    class com.example.assignment3.MapsActivity {
        ~ cityName : String
        ~ strCityLat : String
        ~ strCityLong : String
        - binding : ActivityMapsBinding
        - mMap : GoogleMap
        + onMapReady()
        # onCreate()
    }
  }
  

  com.example.assignment3.ForecastWeatherActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.assignment3.ForecastWeatherActivity +-down- com.example.assignment3.ForecastWeatherActivity.ForecastAdapter
  com.example.assignment3.ForecastWeatherActivity.ForecastAdapter -up-|> android.widget.BaseAdapter
  com.example.assignment3.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.assignment3.MapsActivity .up.|> com.google.android.gms.maps.OnMapReadyCallback
  com.example.assignment3.MapsActivity -up-|> androidx.fragment.app.FragmentActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
